M: Minor responsive fixes on New DropOff screen

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -69,29 +69,33 @@ body {
 }
 
 .form-card {
-    max-width: 55rem;
-    min-width: 28rem;
-    background-color: white;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 2rem;
-    padding-bottom: 1rem;
-    border: 1px solid #ccc;
+  width: 100%;
+  max-width: 55rem;
+  background-color: white;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
 .status-card {
-    max-width: 25rem;
-    min-width: 15rem;
-    background-color: white;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 2rem;
-    padding-bottom: 1rem;
-    border: 1px solid #ccc;
+  width: 100%;
+  max-width: 25rem;
+  background-color: white;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+  padding-bottom: 1rem;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
 }
 
 .filter-container {
@@ -124,4 +128,12 @@ body {
 
 .scrollable-section::-webkit-scrollbar-thumb:hover {
   background-color: #a0a0a0;
+}
+
+@media (min-width: 768px) {
+  .status-card {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+  }
 }
